MCA App/Release/Release 2.1/Source Code v2.1/MCA Packaging Org/src/objects/Bank_API_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Api_Url__c</fullName>
        <label>Api Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Attribute_1__c</fullName>
        <label>Attribute 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funder_Account__c</fullName>
        <label>Funder Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Bank API Settings</label>
</CustomObject>